--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -1,22 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/dark_grey"
-    >
+    android:background="@color/dark_grey">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/add_training_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/dark_grey"
-        android:elevation="4dp"
         app:layout_constraintTop_toTopOf="parent"
         app:menu="@menu/add_training_toolbar"
         app:title="New training"
-        app:titleTextColor="?attr/colorOnSecondary" />
+        app:titleTextColor="?attr/colorOnSecondary"
+        />
 
     <LinearLayout
         android:weightSum="8"
