--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -17,4 +17,8 @@
         <!-- Customize your theme here. -->
         <item name="android:autofilledHighlight" tools:targetApi="o">@android:color/transparent</item>
     </style>
+
+    <style name="Toolbar.TitleText" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
+        <item name="android:textSize">40sp</item>
+    </style>
 </resources>
