--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,5 +17,10 @@
         <item name="android:color" tools:targetApi="l">@color/black</item>
         <!-- Customize your theme here. -->
         <item name="colorControlHighlight">@color/white</item>
+
     </style>
+    <style name="Toolbar.TitleText" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
+        <item name="android:textSize">40sp</item>
+    </style>
+
 </resources>
