--- a/app/src/main/res/layout/fragment_add_excercise.xml
+++ b/app/src/main/res/layout/fragment_add_excercise.xml
@@ -12,7 +12,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/dark_grey"
-        android:elevation="4dp"
         app:layout_constraintTop_toTopOf="parent"
         app:menu="@menu/add_exercise_toolbar"
         app:title="Add exercise"
@@ -28,11 +27,11 @@
         android:layout_height="wrap_content">
 
         <Spinner
+            android:theme="@style/spinnerTheme"
             android:layout_marginTop="10dp"
             android:id="@+id/exercise_type_sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/white"
             android:visibility="visible"
             android:layout_gravity="right"
             />
@@ -182,6 +181,7 @@
             android:text="@string/exercise_timer_cb"
             android:textColor="@color/white"
             android:visibility="gone"
+            app:buttonTint="@color/white"
             tools:visibility="visible" />
 
 
