--- a/app/src/main/res/layout/row_feed.xml
+++ b/app/src/main/res/layout/row_feed.xml
@@ -39,11 +39,13 @@
                 android:layout_toEndOf="@id/row_profile_image">
 
                 <TextView
+                    android:textColor="@color/white"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/display_name"/>
 
                 <TextView
+                    android:textColor="@color/white"
                     android:paddingTop="5dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -68,12 +70,14 @@
                 android:orientation="vertical"
                 android:paddingHorizontal="10dp">
                 <TextView
+
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Free throws"
                     android:textColor="@color/white"
                     android:textSize="11sp" />
                 <TextView
+                    android:textColor="@color/white"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/free_throws"
@@ -97,12 +101,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Threes"
+                    android:textColor="@color/white"
                     android:textSize="11sp"
                     />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/threes"
+                    android:textColor="@color/white"
                     />
 
             </LinearLayout>
@@ -124,11 +130,13 @@
                     android:layout_height="wrap_content"
                     android:text="Time"
                     android:textSize="11sp"
+                    android:textColor="@color/white"
                     />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/duration"
+                    android:textColor="@color/white"
                     />
 
             </LinearLayout>
@@ -170,6 +178,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
+                android:textColor="@color/white"
                 android:focusable="true" />
 
             <TextView
@@ -177,6 +186,7 @@
                 android:id="@+id/comments"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/white"
                 android:layout_alignParentRight="true"
                 android:focusable="true" />
 
