--- a/app/src/main/res/values-v26/themes.xml
+++ b/app/src/main/res/values-v26/themes.xml
@@ -28,4 +28,11 @@
         <item name="android:textSize">40sp</item>
     </style>
 
+    <style name="spinnerTheme">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:background">@color/dark_grey</item>
+        <item name="android:textColorSecondary">@color/white</item>
+        <item name="android:color">@color/white</item>
+
+    </style>
 </resources>
