--- a/app/src/main/res/layout/fragment_add_excercise.xml
+++ b/app/src/main/res/layout/fragment_add_excercise.xml
@@ -184,6 +184,17 @@
             app:buttonTint="@color/white"
             tools:visibility="visible" />
 
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Position"
+            android:textColor="@color/white"
+            android:background="@drawable/round_ripple"
+            android:id="@+id/add_position"
+            android:layout_marginTop="10dp"
+            android:layout_gravity="center"
+            />
+
 
     </LinearLayout>
 </RelativeLayout>
