--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="more_light_grey">#474747</color>
     <color name="transparent">#00FFFFFF</color>
     <color name="disabled_text">#99FFFFFF</color>
+    <color name="red">#FF0000</color>
 
 
 
