--- a/app/src/main/res/layout/activity_trainigs.xml
+++ b/app/src/main/res/layout/activity_trainigs.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TrainigsActivity">
+    tools:context=".Trainings.TrainigsActivity">
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/past_trainings_toolbar"
         android:layout_width="match_parent"
