--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -31,7 +31,7 @@
         android:id="@+id/edit_profile_name"
         android:text="Name"
         android:layout_marginBottom="3dp"
-        android:textSize="16sp"
+        android:textSize="14sp"
         android:layout_marginHorizontal="30dp"
         android:textColor="@color/disabled_text"/>
 
@@ -49,7 +49,7 @@
         android:maxLines="1"
         android:padding="10dp"
         android:textColor="?attr/colorOnSecondary"
-        android:textSize="20sp" />
+        android:textSize="16sp" />
 
 
 
@@ -76,7 +76,7 @@
                     android:id="@+id/edit_profile_gender_tv"
                     android:text="Gender"
                     android:layout_marginBottom="3dp"
-                    android:textSize="16sp"
+                    android:textSize="14sp"
                     android:layout_marginHorizontal="30dp"
                     android:textColor="@color/disabled_text"/>
 
@@ -87,7 +87,7 @@
                     android:background="@drawable/round_edit_text">
                         <Spinner
                             android:theme="@style/spinnerTheme"
-                            android:textSize="20sp"
+                            android:textSize="16sp"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:id="@+id/edit_profile_spinner"/>
@@ -107,7 +107,7 @@
                 android:id="@+id/edit_profile_birthday_tv"
                 android:text="Birthdate"
                 android:layout_marginBottom="3dp"
-                android:textSize="16sp"
+                android:textSize="14sp"
                 android:layout_marginHorizontal="30dp"
                 android:textColor="@color/disabled_text"/>
 
@@ -121,7 +121,8 @@
                 android:maxLines="1"
                 android:padding="10dp"
                 android:textColor="?attr/colorOnSecondary"
-                android:textSize="20sp"
+                android:textSize="16sp"
+                android:layout_gravity="center"
                 app:drawableStartCompat="@drawable/ic_outline_calendar" />
         </LinearLayout>
 
@@ -152,7 +153,7 @@
                 android:id="@+id/edit_profile_weight_tv"
                 android:text="Weight"
                 android:layout_marginBottom="3dp"
-                android:textSize="16sp"
+                android:textSize="14sp"
                 android:layout_marginHorizontal="30dp"
                 android:textColor="@color/disabled_text"/>
 
@@ -169,7 +170,7 @@
                     android:background="@drawable/round_edit_text"
                     android:textColor="?attr/colorOnSecondary"
                     android:drawableEnd="@drawable/ic_kg"
-                    android:textSize="20sp">
+                    android:textSize="15sp">
 
                     </EditText>
         </LinearLayout>
@@ -187,7 +188,7 @@
                 android:id="@+id/edit_profile_height_tv"
                 android:text="Height"
                 android:layout_marginBottom="3dp"
-                android:textSize="16sp"
+                android:textSize="14sp"
                 android:layout_marginHorizontal="30dp"
                 android:textColor="@color/disabled_text"/>
 
@@ -204,7 +205,7 @@
                 android:padding="10dp"
                 android:drawableEnd="@drawable/ic_cm"
                 android:textColor="?attr/colorOnSecondary"
-                android:textSize="20sp" />
+                android:textSize="16sp" />
         </LinearLayout>
 
     </LinearLayout>
