--- a/app/src/main/res/drawable/wave.xml
+++ b/app/src/main/res/drawable/wave.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="320">
   <path
       android:pathData="M0,160L40,160C80,160 160,160 240,181.3C320,203 400,245 480,229.3C560,213 640,139 720,117.3C800,96 880,128 960,144C1040,160 1120,160 1200,133.3C1280,107 1360,53 1400,26.7L1440,0L1440,0L1400,0C1360,0 1280,0 1200,0C1120,0 1040,0 960,0C880,0 800,0 720,0C640,0 560,0 480,0C400,0 320,0 240,0C160,0 80,0 40,0L0,0Z"
-      android:fillColor="@color/nice_purple"/>
+      android:fillColor="@color/nice_black"/>
 </vector>
