--- a/app/src/main/res/layout/activity_completed_trainings.xml
+++ b/app/src/main/res/layout/activity_completed_trainings.xml
@@ -6,17 +6,19 @@
     android:layout_height="match_parent"
     tools:context=".Trainings.TrainigsActivity">
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/past_trainings_toolbar"
+        android:id="@+id/completed_trainings_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/dark_grey"
         app:layout_constraintTop_toTopOf="parent"
-        app:title="Trainings"
+        app:title="Completed trainings"
         app:titleTextColor="?attr/colorOnSecondary" >
+
     </androidx.appcompat.widget.Toolbar>
 
+
     <FrameLayout
-        android:layout_below="@id/past_trainings_toolbar"
+        android:layout_below="@id/completed_trainings_toolbar"
         android:id="@+id/trainings_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
