--- a/app/src/main/res/layout/fragment_completed_trainings.xml
+++ b/app/src/main/res/layout/fragment_completed_trainings.xml
@@ -4,9 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/dark_grey"
-    tools:context=".Trainings.TrainingsFragment">
+    tools:context=".Trainings.TrainingsFragment"
+    >
     <androidx.recyclerview.widget.RecyclerView
-        android:paddingHorizontal="20dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/recyclerView"
