--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -112,7 +112,7 @@
             android:layout_below="@id/edit_profile_divider2">
 
              <com.google.android.material.card.MaterialCardView
-
+                 android:layout_marginBottom="15dp"
                  android:layout_width="match_parent"
                  android:clickable="true"
                  android:focusable="true"
@@ -158,6 +158,54 @@
 
 
              </com.google.android.material.card.MaterialCardView>
+
+                <com.google.android.material.card.MaterialCardView
+
+                    android:layout_width="match_parent"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:id="@+id/completed_trainings_card_view"
+                    app:cardCornerRadius="10dp"
+                    app:rippleColor="@color/more_light_grey"
+                    app:cardBackgroundColor="@color/light_grey"
+                    android:layout_height="40dp">
+
+                        <RelativeLayout
+                            android:padding="10dp"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="horizontal">
+
+                                <ImageView
+                                    android:layout_alignParentStart="true"
+                                    android:layout_centerInParent="true"
+                                    android:id="@+id/ic_basketball2"
+                                    android:layout_width="20dp"
+                                    android:layout_height="20dp"
+                                    android:src="@drawable/ic_basketball"
+                                    />
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_toEndOf="@id/ic_basketball2"
+                                    android:layout_centerVertical="true"
+                                    android:paddingLeft="10dp"
+                                    android:text="@string/completed_trainings"
+                                    android:textColor="@color/white" />
+
+                                <ImageView
+                                    android:layout_alignParentRight="true"
+                                    android:layout_centerVertical="true"
+                                    android:id="@+id/ic_arrow2"
+                                    android:layout_width="20dp"
+                                    android:layout_height="20dp"
+                                    android:layout_gravity="right"
+                                    android:src="@drawable/ic_arrow" />
+                        </RelativeLayout>
+
+
+                </com.google.android.material.card.MaterialCardView>
 
              <com.google.android.material.card.MaterialCardView
                  android:layout_marginTop="15dp"
