--- a/app/src/main/res/values-night-v26/themes.xml
+++ b/app/src/main/res/values-night-v26/themes.xml
@@ -4,7 +4,7 @@
     <style name="Theme.EmpProjektna" parent="Theme.AppCompat.DayNight.NoActionBar">
 
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/nice_purple</item>
+        <item name="colorPrimary">@color/orange</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
