--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,6 +19,7 @@
     <color name="text_grey">#565360</color>
     <color name="text_background_selected">#302b42</color>
     <color name="orange">#E53935</color>
+    <color name="green">#00F000</color>
 
 
 
