--- a/app/src/main/res/layout/fragment_completed_trainings.xml
+++ b/app/src/main/res/layout/fragment_completed_trainings.xml
@@ -7,6 +7,7 @@
     tools:context=".Trainings.TrainingsFragment"
     >
     <androidx.recyclerview.widget.RecyclerView
+        android:layout_marginHorizontal="20dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/recyclerView"
