dodan view completed training

--- a/app/src/main/res/layout/fragment_add_excercise.xml
+++ b/app/src/main/res/layout/fragment_add_excercise.xml
@@ -191,7 +191,7 @@
             android:textColor="@color/white"
             android:visibility="gone"
             app:buttonTint="@color/white"
-            tools:visibility="visible" />
+            tools:visibility="invisible" />
 
 
 
