--- a/app/src/main/res/layout/row_training.xml
+++ b/app/src/main/res/layout/row_training.xml
@@ -1,48 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="10dp"
-    app:cardCornerRadius="20dp"
+    android:orientation="horizontal"
+    android:weightSum="5"
     android:clickable="true"
     android:focusable="true"
-    android:orientation="horizontal"
-    android:background="@drawable/round_ripple"
+    android:padding="10dp"
     android:layout_marginTop="20dp"
+    android:background="@drawable/round_ripple">
 
-    >
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_weight="3"
+        android:layout_height="wrap_content"
+
+        android:orientation="horizontal"
+
+        >
 
     <TextView
-        android:layout_alignParentStart="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tv_number"
         android:textStyle="bold"
         android:textColor="@color/white"
         android:textSize="20sp"/>
-    
+
     <TextView
-        android:layout_centerVertical="true"
         android:id="@+id/tv_training_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toEndOf="@+id/tv_number"
         android:paddingStart="10dp"
         android:textColor="@color/white"
-        android:textSize="20sp"
+        android:textSize="14sp"
         android:textStyle="bold" />
+</LinearLayout>
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_weight="2"
+        android:layout_height="wrap_content"
 
+        android:orientation="horizontal"
+
+        >
     <TextView
         android:id="@+id/tv_exercise_type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
         android:textColor="@color/white"
-        android:textSize="20sp"
+        android:textSize="14sp"
        />
 
 
@@ -52,7 +62,7 @@
         android:id="@+id/exercises"
         android:layout_toStartOf="@+id/exercises_icon"
         android:textColor="@color/white"
-        android:textSize="20sp"
+        android:textSize="14sp"
         android:layout_marginEnd="5dp"
         android:layout_centerVertical="true"
        />
@@ -69,4 +79,8 @@
         android:layout_marginEnd="20dp"
         android:src="@drawable/ic_exercises" />
 
-</RelativeLayout>
+
+    </LinearLayout>
+
+
+</LinearLayout>
