--- a/app/src/main/res/layout/fragment_view_completed_training.xml
+++ b/app/src/main/res/layout/fragment_view_completed_training.xml
@@ -49,6 +49,12 @@
                 android:textColor="?attr/colorOnSecondary"
                 android:textSize="16sp"
                 app:drawableStartCompat="@drawable/ic_outline_calendar" />
-        </LinearLayout>
+    </LinearLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_marginHorizontal="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/recyclerView"
+        />
 
 </LinearLayout>
