--- a/app/src/main/res/layout/row_exercise.xml
+++ b/app/src/main/res/layout/row_exercise.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-<RelativeLayout
+
+
+
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -13,53 +16,66 @@
     android:orientation="horizontal"
     android:background="@drawable/round_ripple"
     android:layout_marginTop="20dp"
+    android:weightSum="5"
     >
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="2.5">
 
-    <TextView
-        android:layout_alignParentStart="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/tv_number"
-        android:textStyle="bold"
-        android:textColor="@color/white"
-        android:textSize="20sp"/>
-    
-    <TextView
-        android:id="@+id/tv_exercise_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toEndOf="@+id/tv_number"
-        android:paddingStart="10dp"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        android:textStyle="bold" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/tv_number"
+            android:textStyle="bold"
+            android:textColor="@color/white"
+            android:textSize="20sp"/>
 
-    <TextView
-        android:id="@+id/tv_exercise_type"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-       />
+        <TextView
+            android:singleLine="true"
+            android:ellipsize="end"
+            android:layout_gravity="center"
+            android:gravity="center|left"
+            android:id="@+id/tv_exercise_name"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+    </LinearLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/length"
-        android:layout_toStartOf="@+id/minutes_icon"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        android:layout_centerVertical="true"
-       />
+    <RelativeLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="2.5">
+        <TextView
+            android:id="@+id/tv_exercise_type"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="10dp"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+           />
 
-    <ImageView
-        android:layout_centerVertical="true"
-        android:layout_marginStart="5dp"
-        android:id="@+id/minutes_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_min"
-        android:layout_alignParentEnd="true"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/length"
+            android:layout_toStartOf="@+id/minutes_icon"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            android:layout_centerVertical="true"
+           />
 
-</RelativeLayout>
+        <ImageView
+            android:layout_centerVertical="true"
+            android:layout_marginStart="5dp"
+            android:id="@+id/minutes_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_min"
+            android:layout_alignParentEnd="true"/>
+    </RelativeLayout>
+</LinearLayout>
